--- a/vanilla-react/index.html
+++ b/vanilla-react/index.html
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>example</title>
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://unpkg.com/react@18/umd/react.development.js"
-      defer
-    ></script>
-    <script
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-      defer
-    ></script>
-    <script type="module" src="script.js" defer></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script type="module" src="script.js"></script>
   </head>
 
   <body>
