--- a/01-vanilla-javascript/index.html
+++ b/01-vanilla-javascript/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Example</title>
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="script.js" defer></script>
+    <script type="module" src="script.js"></script>
   </head>
 
   <body>
