--- a/02-vanilla-react/index.html
+++ b/02-vanilla-react/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>example</title>
+
+    <title>Vanilla React</title>
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Import React and React and ReactDOM libraries -->
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
     <script type="module" src="script.js"></script>
   </head>
 
